--- a/catalogue/era5/era5-land-daily/__item__.yaml
+++ b/catalogue/era5/era5-land-daily/__item__.yaml
@@ -44,7 +44,7 @@ properties:
       extent:
       - '1950-01-01T00:00:00Z'
       - '2025-10-31T00:00:00Z'
-      step: PT1H
+      step: PT1D
     latitude:
       type: spatial
       axis: y
@@ -78,4 +78,12 @@ properties:
       type: data
       description: 2 metre temperature
       unit: K
-  dc:extent: 1.2 TB
+    v10:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre V wind component
+      unit: m s**-1
+  dc:extent: 1.8 TB
