--- a/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
@@ -1,7 +1,7 @@
 links:
-- title: ERA5 monthly data on single levels from 1940 to present
+- title: ERA5 monthly averaged data on single levels from 1940 to present
   rel: derived_from
-  href: https://doi.org/10.24381/cds.adbb2d47
+  href: https://doi.org/10.24381/cds.f17050d7
   type: text/html
 bbox:
 - 0.0
@@ -25,7 +25,7 @@ properties:
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr
     format ideal for time series analysis
-  dc:title: ERA5 monthly data on single levels
+  dc:title: ERA5 monthly averaged data on single levels
   datetime: '2025-10-01T00:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
   end_datetime: '2025-10-01T00:00:00Z'
