--- a/catalogue/era5/era5-land-daily/__item__.yaml
+++ b/catalogue/era5/era5-land-daily/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: ERA5-Land daily data from 1950 to present
+- title: ERA5-Land hourly data from 1950 to present
   rel: derived_from
   href: https://doi.org/10.24381/cds.e2161bac
   type: text/html
@@ -19,13 +19,13 @@ assets:
     xarray:storage_options:
       client_kwargs:
         trust_env: true
-search_weight: 75
+search_weight: 80
 properties:
   edh:maturity: draft
   dc:abstract: ERA5-Land provides land variables evolution over several decades at
     an enhanced resolution compared to ERA5. The dataset is provided in a ARCO Zarr
     format ideal for time series analysis
-  dc:title: ERA5-Land daily data
+  dc:title: ERA5-Land daily averaged data
   datetime: '2025-10-31T00:00:00Z'
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2025-10-31T00:00:00Z'
