Remove NetCDF from the description as it is confusing

--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
@@ -18,7 +18,7 @@ properties:
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit 117 on UTM 32N
   dc:description: Sentinel-1 ARD for relative orbit 117 on UTM 32N.
-    The dataset is formatted as a NetCDF / Zarr archive optimised for time analysis.
+    The dataset is formatted as a Zarr archive optimised for time analysis.
   dc:subject:
   - Copernicus
   - Sentinel-1
