--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -17,7 +17,7 @@ properties:
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
   dc:description: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}.
-    The dataset is formatted as a NetCDF / Zarr archive optimised for time analysis.
+    The dataset is formatted as a Zarr archive optimised for time analysis.
   dc:subject:
   - Copernicus
   - Sentinel-1
