--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
@@ -18,7 +18,7 @@ properties:
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit 22 on UTM 33N
   dc:description: Sentinel-1 ARD for relative orbit 22 on UTM 33N.
-    The dataset is formatted as a NetCDF / Zarr archive optimised for time analysis.
+    The dataset is formatted as a Zarr archive optimised for time analysis.
   dc:subject:
   - Copernicus
   - Sentinel-1
