--- a/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
+++ b/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
@@ -10,7 +10,7 @@ bbox:
 - 90.0
 assets:
   data:
-    href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-pressure-levels-v0.zarr
+    href: https://data.earthdatahub.destine.eu/era5/era5-pressure-levels-for-wind-developers-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
@@ -21,11 +21,11 @@ assets:
         trust_env: true
 search_weight: 70
 properties:
-  edh:maturity: published
-  dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
-    ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr
+  edh:maturity: draft
+  dc:abstract: Subset of ERA5 reanalysis on pressure levels for
+    atmospheric quantities. The dataset is provided in a ARCO Zarr v3
     format ideal for time series analysis
-  dc:title: ERA5 hourly data on pressure levels
+  dc:title: ERA5 hourly data on pressure levels for wind developers
   datetime: '2025-10-31T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
   end_datetime: '2025-10-31T23:00:00Z'
@@ -36,7 +36,6 @@ properties:
   - pressure levels
   - surface
   - reanalysis
-  - weather
   dc:accrual_periodicity: freq:monthly
   cube:dimensions:
     valid_time:
