--- a/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
+++ b/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
@@ -22,13 +22,12 @@ assets:
 search_weight: 65
 properties:
   edh:maturity: published
-  dc:abstract: Subset of ERA5 reanalysis on pressure levels for
-    atmospheric quantities. The dataset is provided in a ARCO Zarr v3
-    format ideal for time series analysis
+  dc:abstract: Subset of ERA5 reanalysis on pressure levels for atmospheric quantities.
+    The dataset is provided in a ARCO Zarr v3 format ideal for time series analysis
   dc:title: ERA5 hourly data on pressure levels for wind developers
-  datetime: '2025-10-31T23:00:00Z'
+  datetime: '2025-09-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-10-31T23:00:00Z'
+  end_datetime: '2025-09-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -42,7 +41,7 @@ properties:
       type: temporal
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-10-31T23:00:00Z'
+      - '2025-09-30T23:00:00Z'
       step: PT1H
       axis: t
     latitude:
@@ -61,89 +60,8 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 949.9 TB
+  dc:extent: 56.2 TB
   cube:variables:
-    cc:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Fraction of cloud cover
-      unit: (0 - 1)
-    ciwc:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Specific cloud ice water content
-      unit: kg kg**-1
-    clwc:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Specific cloud liquid water content
-      unit: kg kg**-1
-    crwc:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Specific rain water content
-      unit: kg kg**-1
-    cswc:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Specific snow water content
-      unit: kg kg**-1
-    d:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Divergence
-      unit: s**-1
-    o3:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Ozone mass mixing ratio
-      unit: kg kg**-1
-    pv:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Potential vorticity
-      unit: K m**2 kg**-1 s**-1
-    q:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Specific humidity
-      unit: kg kg**-1
     r:
       dimensions:
       - valid_time
@@ -180,21 +98,12 @@ properties:
       type: data
       description: V component of wind
       unit: m s**-1
-    vo:
-      dimensions:
-      - valid_time
-      - isobaricInhPa
-      - latitude
-      - longitude
-      type: data
-      description: Vorticity (relative)
-      unit: s**-1
     w:
       dimensions:
       - valid_time
       - isobaricInhPa
-      - latitude
       - longitude
+      - latitude
       type: data
       description: Vertical velocity
       unit: Pa s**-1
