--- a/catalogue/era5/era5-pressure-levels-for-wind-developers/plots.yaml
+++ b/catalogue/era5/era5-pressure-levels-for-wind-developers/plots.yaml
@@ -1,5 +1,5 @@
 plots:
-- var: "u10"
+- var: "u"
   time_dim: "valid_time"
   sel: {"valid_time": "1972-07-03T15:00", "isobaricInhPa": 950}
   plot_kwargs: {
