--- a/catalogue/era5/era5-land-daily/__item__.yaml
+++ b/catalogue/era5/era5-land-daily/__item__.yaml
@@ -61,7 +61,7 @@ properties:
       extent:
       - 0.0
       - 359.9
-  dc:extent: 7.0 TB
+  dc:extent: 8.2 TB
   cube:variables:
     d2m:
       dimensions:
@@ -87,6 +87,14 @@ properties:
       type: data
       description: Potential evaporation
       unit: m
+    ro:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Runoff
+      unit: m
     sp:
       dimensions:
       - valid_time
@@ -95,6 +103,14 @@ properties:
       type: data
       description: Surface pressure
       unit: Pa
+    ssr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net short-wave (solar) radiation
+      unit: J m**-2
     ssrd:
       dimensions:
       - valid_time
