--- a/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
+++ b/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
@@ -22,8 +22,7 @@ assets:
 search_weight: 65
 properties:
   edh:maturity: published
-  dc:abstract: Subset of ERA5 reanalysis on pressure levels for atmospheric quantities.
-    The dataset is provided in a ARCO Zarr v3 format ideal for time series analysis
+  dc:abstract: Subset of ERA5 reanalysis on pressure levels for atmospheric quantities (low altitude pressure levels only). The dataset is provided in a ARCO Zarr v3 format ideal for time series analysis
   dc:title: ERA5 hourly data on pressure levels for wind developers
   datetime: '2025-09-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
