--- a/catalogue/copernicus-dem/__collection__.yaml
+++ b/catalogue/copernicus-dem/__collection__.yaml
@@ -1,4 +1,4 @@
-title: Copernicus Digital Elevation Model (DEM)
+title: Copernicus DEM
 dc:abstract:
   The Copernicus DEM is a Digital Surface Model (DSM) that represents the surface of the Earth including buildings,
   infrastructure and vegetation. Data were acquired through the TanDEM-X mission
