--- a/catalogue/copernicus-dem-utm/__collection__.yaml
+++ b/catalogue/copernicus-dem-utm/__collection__.yaml
@@ -1,4 +1,4 @@
-title: Copernicus Digital Elevation Model (DEM) UTM / UPS
+title: Copernicus DEM in UTM / UPS
 dc:abstract:
   The Copernicus DEM is a Digital Surface Model (DSM) that represents
   the surface of the Earth including buildings, infrastructure and vegetation.
