--- a/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
+++ b/catalogue/era5/era5-pressure-levels-for-wind-developers/__item__.yaml
@@ -22,11 +22,13 @@ assets:
 search_weight: 65
 properties:
   edh:maturity: published
-  dc:abstract: Subset of ERA5 reanalysis on pressure levels for atmospheric quantities (low altitude pressure levels only). The dataset is provided in a ARCO Zarr v3 format ideal for time series analysis
+  dc:abstract: Subset of ERA5 reanalysis on pressure levels for atmospheric quantities
+    (low altitude pressure levels only). The dataset is provided in a ARCO Zarr v3
+    format ideal for time series analysis
   dc:title: ERA5 hourly data on pressure levels for wind developers
-  datetime: '2025-09-30T23:00:00Z'
+  datetime: '2025-11-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-09-30T23:00:00Z'
+  end_datetime: '2025-11-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -39,7 +41,7 @@ properties:
       type: temporal
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-09-30T23:00:00Z'
+      - '2025-11-30T23:00:00Z'
       step: PT1H
       axis: t
     latitude:
@@ -58,7 +60,7 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 56.2 TB
+  dc:extent: 56.3 TB
   cube:variables:
     r:
       dimensions:
