--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -26,9 +26,9 @@ properties:
     and land surface quantities. The dataset is provided in a ARCO Zarr format ideal
     for time series analysis
   dc:title: ERA5 hourly data on single levels
-  datetime: '2025-10-31T23:00:00Z'
+  datetime: '2025-11-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-10-31T23:00:00Z'
+  end_datetime: '2025-11-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -60,8 +60,8 @@ properties:
       axis: t
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-10-31T23:00:00Z'
-  dc:extent: 400.0 TB
+      - '2025-11-30T23:00:00Z'
+  dc:extent: 403.5 TB
   cube:variables:
     alnid:
       dimensions:
@@ -1087,3 +1087,11 @@ properties:
       type: data
       description: Friction velocity
       unit: m s**-1
+    tcwv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column vertically-integrated water vapour
+      unit: kg m**-2
