--- a/catalogue/cmip6/__collection__.yaml
+++ b/catalogue/cmip6/__collection__.yaml
@@ -1,7 +1,6 @@
-title: CMIP6, activity ScenarioMIP, model EC-Earth3-CC, experiment SSP2-4.5 and SSP5-8.5 
+title: CMIP6 
 dc:abstract:
-  AThe Scenario Model Intercomparison Project (ScenarioMIP) is the primary activity within Phase 6 of the Coupled Model Intercomparison Project (CMIP6) that provides multi-model climate projections based on alternative scenarios of future emissions and land use changes produced with integrated assessment models. Here we propose datasets from the 
-  EC-Earth3-CC model.
+  The Scenario Model Intercomparison Project (ScenarioMIP) is the primary activity within Phase 6 of the Coupled Model Intercomparison Project (CMIP6) that provides multi-model climate projections based on alternative scenarios of future emissions and land use changes produced with integrated assessment models.
 edh:maturity: published
 links:
 - title: Coupled Model Intercomparison Project Phase 6
@@ -41,4 +40,4 @@ providers:
   roles:
   - host
   url: https://platform.destine.eu
-search_weight: 80
+search_weight: 85
