--- a/catalogue/climate-dt/__collection__.yaml
+++ b/catalogue/climate-dt/__collection__.yaml
@@ -1,6 +1,6 @@
-title: DestinE Climate Adaptation DT, activity ScenarioMIP, experiment SSP3-7.0, model IFS-NEMO
+title: Climate DT
 dc:abstract:
-  The DestinE Digital Twin for Climate Change Adaptation (Climate DT) supports
+  The Destination Earth Digital Twin for Climate Change Adaptation supports
   adaptation activities through the provision of innovative climate information on multi-decadal
   timescales, at km-scale resolutions of 5 to 10km.
 dc:access_rights: restricted
