--- a/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/CMCC-CM2-SR5-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -6,15 +6,15 @@ steps:
     retries: 3
     filename_or_obj:
       "project": CMIP6
-      "experiment_id": ssp*
+      "experiment_id": ["ssp126", "ssp245", "ssp370", "ssp585"]
       "source_id": CMCC-CM2-SR5
       "frequency": ["day", "fx"]
-      "variable_id": ["uas", "vas", "areacella"] # "psl", "tas", "psl", "hurs", "huss", "siconca", "rsds",
-      #"rlut","rlus","rlds"]
+      #"variable_id": ["areacella", "pr", "tas", "hurs", "huss", "psl", "uas", "vas"]
+      "variable_id": ["rsds", "rlut","rlus","rlds"]
       "variant_label": r1i1p1f1
       "grid_label": gn
     concat_dims: experiment_id
-    esgpull_path: /tmp/esgpull
+    esgpull_path: /data/esgpull
     index_node: esgf.ceda.ac.uk
   chunks: {experiment_id: 1, time: 180, lat: 128, lon: 128 }
   to_zarr_kwargs: {
@@ -27,6 +27,6 @@ steps:
   }
   robust_to_zarr_kwargs: {
     processing_dim: time,
-    chunks_per_processing_batch: 4,
+    chunks_per_processing_batch: 1,
     retries: 3
   }
