--- a/catalogue/cmip6/IPSL-CM6A-LR-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/IPSL-CM6A-LR-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -9,7 +9,7 @@ steps:
       "experiment_id": historical
       "source_id": IPSL-CM6A-LR
       "frequency": ["day", "fx"]
-      "variable_id": ["areacella", "pr", "tas", "hurs", "psl", "uas", "vas"]
+      "variable_id": ["areacella", "pr", "tas"] #"hurs", "psl", "uas", "vas"
       #"variable_id": ["rsds", "rlut","rlus","rlds"]
       "variant_label": r1i1p1f1
       "grid_label": gr
@@ -27,6 +27,6 @@ steps:
   }
   robust_to_zarr_kwargs: {
     processing_dim: time,
-    chunks_per_processing_batch: 1,
+    chunks_per_processing_batch: 8,
     retries: 3,
   }
