--- a/catalogue/cmip6/IPSL-CM6A-LR-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/IPSL-CM6A-LR-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -3,14 +3,26 @@ steps:
     chunks: {}
     engine: esgf
     download: true
+    check_files: false
     retries: 3
     filename_or_obj:
       "project": CMIP6
       "experiment_id": historical
       "source_id": IPSL-CM6A-LR
       "frequency": ["day", "fx"]
-      "variable_id": ["areacella", "pr", "tas"] #"hurs", "psl", "uas", "vas"
-      #"variable_id": ["rsds", "rlut","rlus","rlds"]
+      "variable_id": [
+        "areacella",
+        "pr",
+        "tas",
+        "hurs",
+        "psl",
+        "uas",
+        "vas",
+        "rsds",
+        "rlut",
+        "rlus",
+        "rlds"
+      ]
       "variant_label": r1i1p1f1
       "grid_label": gr
     concat_dims: experiment_id
@@ -27,6 +39,9 @@ steps:
   }
   robust_to_zarr_kwargs: {
     processing_dim: time,
-    chunks_per_processing_batch: 8,
+    chunks_per_processing_batch: 30,
     retries: 3,
   }
+  to_zarr_encoding:
+    time_bounds:
+      'units': 'days since 1850-01-01'
