--- a/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -3,14 +3,27 @@ steps:
     chunks: {}
     engine: esgf
     download: true
+    check_files: false
     retries: 3
     filename_or_obj:
       "project": CMIP6
       "experiment_id": ['ssp245', 'ssp585']
       "source_id": EC-Earth3-CC
       "frequency": ["day", "fx"]
-      "variable_id": ["areacella", "pr", "tas", "hurs", "huss", "psl", "uas", "vas"]
-      #"variable_id": ["rsds", "rlut","rlus","rlds"]
+      "variable_id": [
+        #"areacella",
+        "pr",
+        "tas",
+        "hurs",
+        "huss",
+        "psl",
+        "uas",
+        "vas",
+        "rsds",
+        "rlut",
+        "rlus",
+        "rlds"
+      ]
       "variant_label": r1i1p1f1
       "grid_label": gr
     concat_dims: experiment_id
@@ -18,7 +31,7 @@ steps:
     index_node: esgf.ceda.ac.uk
   chunks: {experiment_id: 1, time: 180, lat: 128, lon: 128 }
   to_zarr_kwargs: {
-    store: s3://edh-root/cmip6/EC-Earth3-CC-ScenarioMIP-r1i1p1f1-day-gr-v0.zarr,
+    store: c,
     storage_options: {
       key: 3c3d8fe87ec04e9b9c3a07e10ecc8daa,
       secret: f8d4d5713147465aafc9e7f3649223e7,
@@ -27,6 +40,6 @@ steps:
   }
   robust_to_zarr_kwargs: {
     processing_dim: time,
-    chunks_per_processing_batch: 8,
+    chunks_per_processing_batch: 12,
     retries: 3,
   }
