Change cmip6 ingestion files

--- a/catalogue/cmip6/EC-Earth3-CC-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
+++ b/catalogue/cmip6/EC-Earth3-CC-historical-r1i1p1f1-day-gr/ingestion/ingest-from-esgf-v0.yaml
@@ -22,7 +22,7 @@ steps:
         "rlut",
         "rlus",
         "rlds",
-        #"areacella",
+        "areacella",
       ]
       "variant_label": r1i1p1f1
       "grid_label": gr
